tests/paczka1/fuzzy1/87818773.err
Error in line 1: z5gH7NHSTp A690 72,4
Error in line 5: bKhag44J A815 -2,4
Error in line 3: bKhag44J A815 53,3
Error in line 18: YnB1 A815 54,4
Error in line 17: S482 A690 84,6
Error in line 23: qCQEv S482 90,8
Error in line 27: qCQEv A690 38,0
Error in line 26: YnB1 A690 32,0
Error in line 34: YnB1 S482 31,6
